# mailing_service

./: .gitignore  README.md  config.ini.sample  manage.py  pyproject.toml  requirements.txt  utils.py
apps/blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
apps/blog/migrations/: 0001_initial.py  0002_initial.py
apps/blog/templates/blog/: article_confirm_delete.html  article_detail.html  article_form.html  articles_list.html
apps/clients/: admin.py  forms.py  models.py  urls.py  views.py
apps/clients/migrations/: 0001_initial.py  0002_initial.py
apps/clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  clients_list.html
apps/main/: urls.py  views.py
apps/main/management/commands/: create_su.py  fill_db.py
apps/main/templatetags/: my_tags.py
apps/messages_/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/messages_/migrations/: 0001_initial.py  0002_initial.py  0003_alter_messages_options.py  0004_remove_messages_img_letter.py  0005_messages_img_letter.py
apps/newsletters/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/newsletters/migrations/: 0001_initial.py  0002_initial.py
apps/users/: admin.py  forms.py  models.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py
core/: forms.py  services.py
fixtures/: 001_permissions_data.json  002_groups_data.json  003_users_data.json  004_articles_data.json  005_clients_data.json  006_messages_data.json  007_newsletters_data.json  008_logs_data.json
(+21 files in other folders)
